# mas-decentralized

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  config.py
agents/roles/: architect.py  code_reviewer.py  engineer.py  project_manager.py  qa.py
core/: __init__.py  autogen_compat.py  autogen_config.py  base_role.py  mcp_client.py  mcp_config.py  mcp_tools.py  swarm_loop_guard.py  swebench.py  telemetry.py
logs/: mini_traj_20260510T180201197416Z_turn01.json
